interpreter-janeklang/tests/bad/13_nestedFunctionWrongType_1.janek
int skibidi(){
    return 420;
}

int main(){
    string skibidi(){
        return "420";
    }
    int a = 2137;
    a = skibidi();
    return 0;
}